--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,1 @@
-RedirectMatch 301 ^/Home /index.html
-RedirectMatch 301 ^/Projects /Projects.html
-RedirectMatch 301 ^/Contact /Contact.html
-RedirectMatch 301 ^/Projects /Badges.html
+Options +Multiviews
